RESOLVED FIXED79263
Web Inspector: [Regression] network worker tests crash on qt.
https://bugs.webkit.org/show_bug.cgi?id=79263
Summary Web Inspector: [Regression] network worker tests crash on qt.
Vsevolod Vlasov
Reported 2012-02-22 11:37:56 PST
network worker tests crash on qt.
Attachments
Patch (2.02 KB, patch)
2012-02-22 11:40 PST, Vsevolod Vlasov
no flags
Patch (2.10 KB, patch)
2012-02-24 03:28 PST, Vsevolod Vlasov
pfeldman: review+
Vsevolod Vlasov
Comment 1 2012-02-22 11:40:41 PST
Vsevolod Vlasov
Comment 2 2012-02-22 11:46:00 PST
http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Release/r108506%20%2834089%29/results.html http/tests/inspector/network/network-worker.html crash http/tests/inspector/network/network-shared-worker.html crash
Vsevolod Vlasov
Comment 3 2012-02-22 12:04:46 PST
Csaba Osztrogonác
Comment 4 2012-02-23 11:58:24 PST
Reopen, because it fixed the crashes but made http/tests/inspector/network/network-embed.html fail: http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Release/r108648%20%2834145%29/http/tests/inspector/network/network-embed-pretty-diff.html
Csaba Osztrogonác
Comment 5 2012-02-23 12:03:02 PST
Vsevolod Vlasov
Comment 6 2012-02-24 03:28:14 PST
Vsevolod Vlasov
Comment 7 2012-02-24 03:35:16 PST
Note You need to log in before you can comment on or make changes to this bug.