Web Inspector: [Regression] network worker tests crash on qt. https://bugs.webkit.org/show_bug.cgi?id=79263

Reviewed by Pavel Feldman.

* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::createDecoder):
(WebCore::InspectorPageAgent::cachedResourceContent):

Canonical link: https://commits.webkit.org/96327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108533 268f45cc-cd09-0410-ab3c-d52691b4dbfc